@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T02:00:24Z",
+  "timestamp" : "2022-08-31T08:19:04Z",
   "count_outdated" : 490,
   "uniques_outdated" : 283,
-  "count" : 515,
-  "uniques" : 298,
+  "count" : 516,
+  "uniques" : 299,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
