@@ -1,3 +1,11 @@
+2022-08-31T08:19:04Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2962324418
+* notice: last 14d: unq all: 5 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 283 490 / 298 515
+* notice: next accum: outdated-unq outdated-all / unq all: 283 490 / 299 516
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-31T02:00:24Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2960811745
 * notice: last 14d: unq all: 5 25
